# Path_planning

./: README.md
Inspection-master/: .gitignore
Inspection-master/Inspection-master/src/add_obstacles/: position.txt
Inspection-master/Inspection-master/src/local_planner/paths/: pathList.ply  (+1 more)
Inspection-master/src/inspection_waypoints/: CMakeLists.txt
Inspection-master/src/inspection_waypoints/src/: inspection_waypoints.cpp  path_record.txt
Inspection-master/src/loam_interface/launch/: loam_interface.launch
Inspection-master/src/loam_interface/src/: loamInterface.cpp
Inspection-master/src/local_planner/: CMakeLists.txt
Inspection-master/src/local_planner/path_n/: path_generator.m  startPaths.ply
Inspection-master/src/local_planner/score/: clearPathList.txt  clearPathPerGroupScore.txt
Inspection-master/src/local_planner/src/: path_recorder.cpp
Inspection-master/src/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
Inspection-master/src/vehicle_simulator/rviz/: vehicle_simulator.rviz
Inspection-realrobot/Inspection-realrobot/: .gitignore  README.md
Inspection-realrobot/Inspection-realrobot/src/add_obstacles/: CMakeLists.txt  package.xml  position.txt
Inspection-realrobot/Inspection-realrobot/src/add_obstacles/src/: add_obstacles.cpp
local_planner/launch/: local_planner.launch
local_planner/paths/: path_generator.m  原始.m
local_planner/src/: localPlanner.cpp  pathFollower.cpp
mine_simulator/: CMakeLists.txt  package.xml
mine_simulator/launch/: mine_simulator.launch
mine_simulator/src/: mine_simulator.cpp  pathRefine.cpp  try.cpp
(+39 files in other folders)
